Hilight the "INFO: task xxx blocked for more than" segment; which is usually followed by a Call Trace.

--- a/README.html
+++ b/README.html
@@ -33,7 +33,7 @@ You can just ignore those entries:</p>
 $ vlm-tool -i ntpd node1-messages node2-messages
 </pre>
 
-<p>Any line matching the pattern <em>ntp</em> is just dropped from the input.</p>
+<p>Any line matching the pattern <em>ntpd</em> is just dropped from the input.</p>
 
 <p>Have too many trigger patterns to keep writing on the command line?
 No problem, just put them in a file, one per line.
